<resources>
    <string name="app_name">ProyectOpenGl</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_profile">Profile</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="userName">Username</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="lastName">Last Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="product">Product</string>
    <string name="registerU">Register</string>
    <string name="location">Location</string>
    <string name="sign_in">Sign in</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="property">Property</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
