<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bryan.projectopengl.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etEmail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/etPassword" />

        <Button
            android:layout_width= "wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/button"
            android:background="@drawable/buttoncolor"
            android:textColor="#FFFF"
            android:layout_gravity="center_horizontal" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerU"
            android:id="@+id/buttonRU"
            android:background="@drawable/buttoncolor"
            android:textColor="#FFFF"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
