<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bryan.projectopengl.Home$PlaceholderFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/textView"
                android:layout_weight="1"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvName"
                android:layout_weight="2"
                android:textSize="16sp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_separator_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lastName"
                android:id="@+id/textView2"
                android:layout_weight="1"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvLastName"
                android:layout_weight="2"
                android:textSize="16sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_separator_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvEmail"
                android:layout_weight="2"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
